--- a/public/modules/core/views/home.client.view.html
+++ b/public/modules/core/views/home.client.view.html
@@ -21,161 +21,141 @@
   <ul class=panes>
     <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 1</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 1</span></a>
+        <p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
     <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 2</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 2</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 3</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 3</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 4</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 4</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 5</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 5</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 6</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 6</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 7</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 7</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 8</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 8</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 9</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 9</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 10</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 10</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 11</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 11</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 12</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 12</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 13</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 13</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 14</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 14</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 15</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 15</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 16</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 16</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 17</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 17</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 18</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 18</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
         <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 19</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 19</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
             <li>
     <div class="desc">
-        <a href="/dsm19944/" class="btn"><span>VIEW 20</span></a>
-        <strong class="name">dsm19944</strong>
-        <p>Germantown</p>
+        <a href="#" class="btn"><span>VIEW 20</span></a>
+<p class="carousel_text">[A LOCAL ARTIST]</p>
     </div>
       <img src="http://cdn.bandmix.com/bandmix_us/media/524/524529/1015663-m.jpg" alt="">
     </li>
