--- a/public/modules/browse/views/userProfile.client.view.html
+++ b/public/modules/browse/views/userProfile.client.view.html
@@ -5,18 +5,17 @@
     align-self: center;" src="https://cdn2.iconfinder.com/data/icons/free-basic-icon-set-2/300/2-128.png"/>
 </div><br><a href="#">More Pictures</a>
 	</div>
-	<div style="float:right;width:85%;">
+	<div style="float:right;width:85%;padding-top:20px;">
 
-		<div data-ng-show="authentication.user"><h1 data-ng-bind="artist.stageName"></h1>
-		<span data-ng-model="user.address.city">Location</span>
+<h1 data-ng-bind="artist.username"></h1>
+		<span data-ng-bind="user.city"></span>,<span data-ng-bind="user.state"></span>
 		<div align=right>http://website.com</div>
-		</div>
 		<hr>
 		<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/34019569&color=0066cc"></iframe>
 		<article></article>
-		<i>Genre: </i><br/>
-		<i>Instruments: </i><br/><br/>
-		Bio goes here...<br/>
+		<i>Genre: </i><span data-ng-bind="user.genre"></span><br/>
+		<i>Instruments: </i><span data-ng-bind="user.instrumentsPlayed"></span><br/><br/>
+		<span data-ng-bind="user.bio"></span><br/>
 		<div style="width:50%;margin:0 auto;">
 		<h2>Request this Artist</h2><br/>
 		<form style="border-radius:5px;background-color:lightgray;padding:20px;">
@@ -25,10 +24,11 @@
 		Start time  <input class="input" type="text" name="starttime" size="5">
 		End time  <input class="input" type="text" name="endtime" size="5"><br><br>
 		Payment $ <input class="input" type="text" name="payment" size="7"><br><br>
+<!--
 		<div style="width:20%;margin:0 auto;"><input class="button" type="submit" value="Submit">
 		</form></div></div>
 
-<!--thumbnail image wrapped in a link
+thumbnail image wrapped in a link
 <section id="gallery">
     thumbnail image wrapped in a link
     <section class="item">
@@ -85,10 +85,10 @@
     <a class="next" href="#img1">Next</a>
     <div class="clear"></div>
   </div>
-</div>
-
-
 </div>-->
+
+
+</div>
 
 <h1><a href="#!/browse/">&laquo; Back to Search</h1>
 </section>
