--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -186,8 +186,8 @@
     100%  { left:0; }
 }
 .btn{
-  background-color:#78E69C;
-  border-color:#78E69C;
+  background-color:#78E6B4;
+  border-color:#78E6B4;
 }
 .btn:hover{
   background-color:#A0EEBA;
@@ -197,7 +197,7 @@ a{
   color:darkgray;
 }
 a:hover{
-  color:#78E69C;
+  color:#78E6B4;
 }
 .jumbotron{
   background-image: url('http://i62.tinypic.com/343ll69.jpg');
@@ -208,3 +208,19 @@ a:hover{
   font-size:16px;
   font-weight:bold;
 }
+.btn-primary {
+  color: #fff;
+  background-color: #78E6B4;
+  border-color: #78E6B4;
+}
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary.focus,
+.btn-primary:active,
+.btn-primary.active,
+.open > .dropdown-toggle.btn-primary {
+  color: #fff;
+  background-color: #78E6B4;
+  border-color: #78E6B4;
+}
+
