--- a/public/modules/users/views/dashboard/dashboard.client.view.html
+++ b/public/modules/users/views/dashboard/dashboard.client.view.html
@@ -2,7 +2,7 @@
   <div class="sidebar-brand" id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li>
-        <a ui-sref="dashboard.profile">Edit Profile</a>
+        <a ui-sref="dashboard.profile">Edit Info</a>
        </li>
        <li>
          <a ui-sref="dashboard.listRequests">Requests</a>
@@ -11,7 +11,7 @@
          <a href="#">Gigs</a>
        </li>
        <li>
-         <a href="#">Services</a>
+         <a href="#">View your Profile</a>
        </li>
        <li>
          <a href="#">Contact</a>
