--- a/public/modules/users/views/settings/edit-profile.client.view.html
+++ b/public/modules/users/views/settings/edit-profile.client.view.html
@@ -1,7 +1,7 @@
 <section class="row" data-ng-controller="SettingsController">
 
 	<div class="container">
-		<h1>Edit Profile</h1>
+		<h1>Welecome back {{user.displayName}}!</h1>
 		<hr>
 	<div class="row">
 			<!-- left column -->
