--- a/public/modules/requests/views/list-requests.client.view.html
+++ b/public/modules/requests/views/list-requests.client.view.html
@@ -1,11 +1,11 @@
 <section data-ng-controller="RequestsController" data-ng-init="find()">
     <div class="page-header">
-        <h1>Requests</h1>
+        <h1>Your Requests </h1>
     </div>
     <div class="list-group">
         <a data-ng-repeat="request in requests" data-ng-href="#!/requests/{{request._id}}" class="list-group-item">
+          <h1 data-ng-bind="request.artistName"></h1>
 			<small class="list-group-item-text">
-				Posted on
 				<span data-ng-bind="request.created | date:'medium'"></span>
 				by
 				<span data-ng-bind="request.user.displayName"></span>
@@ -14,6 +14,7 @@
         </a>
     </div>
     <div class="alert alert-warning text-center" data-ng-hide="!requests.$resolved || requests.length">
-    	No Requests yet, why don't you <a href="/#!/requests/create">create one</a>?
+      No Requests yet, check back later.
     </div>
 </section>
+<!-- business Name would like to request you for an evet on date. would you like to accept or decline? -->
