--- a/public/modules/requests/views/create-request.client.view.html
+++ b/public/modules/requests/views/create-request.client.view.html
@@ -52,7 +52,10 @@
 				<div data-ng-show="error" class="text-danger">
 					<strong data-ng-bind="error"></strong>
 				</div>
-            </fieldset>
+        <div data-ng-show="success" class="text-center text-success">
+          <strong>The request was sent!</strong>
+        </div>
+          </fieldset>
         </form>
     </div>
 </section>
