--- a/public/modules/browse/views/userProfile.client.view.html
+++ b/public/modules/browse/views/userProfile.client.view.html
@@ -23,12 +23,9 @@
 			<i>Instruments: </i><br/><br/>
 			Bio goes here...<br/>
 			<div ng-if="authentication.user.userType == 'business'">
-				<div ng-include src="'modules/requests/views/create-request.client.view.html'">
-				</div>
+				<div ng-include src="'modules/requests/views/create-request.client.view.html'"></div>
 			</div>
-			
-
-	thumbnail image wrapped in a link
+  	thumbnail image wrapped in a link
 	<section id="gallery">
 	    thumbnail image wrapped in a link
 	    <section class="item">
