--- a/public/modules/requests/views/list-requests.client.view.html
+++ b/public/modules/requests/views/list-requests.client.view.html
@@ -8,7 +8,9 @@
     <h2>Be at the venue for Rehersal at {{request.rehearsalTime}}</h2>
     <h4>The time slot is {{request.startTime}} to {{request.endTime}}</h4>
     <h4>The amount for the gig is {{request.amount}}</h4>
+    <h5>{{request.hasAccepted}}</h5>
     </div>
+
     <div class="alert alert-warning text-center" data-ng-hide="!requests.\$resolved || requests.length">
       No Requests yet, check back later.
     </div>
