--- a/public/modules/users/views/dashboard/dashboard.client.view.html
+++ b/public/modules/users/views/dashboard/dashboard.client.view.html
@@ -8,13 +8,13 @@
          <a ui-sref="dashboard.listRequests">Requests</a>
        </li>
        <li>
-         <a href="#">Gigs</a>
+         <a ui-sref="gigs">Gigs</a>
        </li>
        <li>
-         <a href="#">View your Profile</a>
+         <a href="#!/browse/{{user._id}}">View your Profile</a>
        </li>
        <li>
-         <a href="#">Contact</a>
+         <a ui-sref="contact">Contact</a>
        </li>
      </ul>
    </div>
