--- a/public/modules/users/views/settings/edit-profile.client.view.html
+++ b/public/modules/users/views/settings/edit-profile.client.view.html
@@ -86,13 +86,19 @@
 								<div class="form-group">
 									<label class="col-lg-3 control-label">Stage Name:</label>
 									<div class="col-lg-8">
-										<input type="text" id="username" name="username" class="form-control" data-ng-model="user.stageName" placeholder="Username">
+										<input type="text" id="username" name="username" class="form-control" data-ng-model="user.username" placeholder="Username">
 									</div>
 								</div>
 								<div class="form-group">
 									<label class="col-lg-3 control-label">Genre:</label>
 									<div class="col-lg-8">
 										<input type="text" id="genre" name="genre" class="form-control" data-ng-model="user.genre" placeholder="Genre(s)">
+									</div>
+								</div>
+								<div class="form-group">
+									<label class="col-lg-3 control-label">Influences:</label>
+									<div class="col-lg-8">
+										<input type="text" id="genre" name="genre" class="form-control" data-ng-model="user.influences" placeholder="Influences">
 									</div>
 								</div>
 								<div class="form-group">
@@ -251,6 +257,7 @@
 				<div class="text-center">
 				</div>
 			</div>
+		</div>
 			<div class="col-md-9 personal-info">
 				<h3>Change Password</h3>
 				<div class="form-group">
