--- a/public/modules/browse/views/userProfile.client.view.html
+++ b/public/modules/browse/views/userProfile.client.view.html
@@ -4,17 +4,22 @@
     align-self: center;" src="https://cdn2.iconfinder.com/data/icons/free-basic-icon-set-2/300/2-128.png"/>
 </div><br><a href="#">More Pictures</a>
 	</div>
-	<div style="float:right;width:85%;">
+	<div style="float:right;width:75%;">
 		<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/34019569&color=0066cc"></iframe>
 
     <h1>{{artist.username}}</h1>
     <h2>{{artist.displayName}}</h2>
+		<h3>{{artist.city}},{{artist.state}}</h3>
+		<h3>{{artist.email}}</h3>
     <h3>Age:{{artist.age}}</h3>
-    <h3>Gender: {{artist.gender}}</h3>
-    
-		<i>Genre: {{artist.genre}}</i><br/>
-		<i>Instruments: {{artist.instrumentsPlayed}}</i><br/><br/>
-		{{artist.bio}}<br/>
+    <h3>Gender: {{artist.gender}}</h3><br/>
+
+		<p><i>Genre: {{artist.genre}}</i></p><br/>
+		<p>Instruments: {{artist.instrumentsPlayed}}</p><br/>
+		<p>Influences: {{artist.influences}}
+		<p>Bio:<br/>{{artist.bio}}</p><br/>
+		<p>Years Played: {{artist.yearsPlayed}}</p>
+		<p>Price per gig: ${{artist.pricePerGig}}</p>
 		<div style="width:50%;margin:0 auto;">
       <div ng-if="authentication.user.userType == 'business'">
         <div ng-include src="'modules/requests/views/create-request.client.view.html'"></div>
